--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
 		"skipLibCheck": true,
 		"resolveJsonModule": true
 	},
-	"include": ["node-youtube-dl/**/**/*.ts"],
-	"exclude": ["node-youtube-dl/**/__tests__"]
+	"include": ["play-dl/**/**/*.ts"],
+	"exclude": ["play-dl/**/__tests__"]
 }
