--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "play-dl",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "YouTube, SoundCloud, Spotify downloader",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -32,6 +32,7 @@
     "dist/*"
   ],
   "dependencies": {
+    "agentkeepalive": "^4.1.4",
     "got": "^11.8.2"
   }
 }
