--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "play-dl",
-  "version": "0.2.1",
+  "version": "0.2.4",
   "description": "YouTube, SoundCloud, Spotify downloader",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/play-dl/play-dl"
+    "url": "https://github.com/play-dl/play-dl"
   },
   "keywords": [
     "node-youtube-dl",
