Engine 16.0 or above are supported

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "bugs": {
     "url": "https://github.com/play-dl/play-dl/issues"
   },
+  "engines": {
+		"node": ">=16.0.0"
+	},
   "homepage": "https://github.com/play-dl/play-dl#readme",
   "files": [
     "dist/*"
