--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "play-dl",
-  "version": "0.5.1",
-  "description": "YouTube, SoundCloud, Spotify downloader",
+  "version": "0.5.2",
+  "description": "YouTube, SoundCloud, Spotify streaming for discord.js bots",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
