--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "soundcloud"
   ],
   "author": "Killer069",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/play-dl/play-dl/issues"
   },
