--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc",
     "build:check": "tsc --noEmit --incremental false",
     "pretty": "prettier --config .prettierrc \"play-dl/*.ts\" \"play-dl/*/*.ts\" \"play-dl/*/*/*.ts\" --write ",
-    "prepublishOnly": "tsc --build --clean;tsc --build --verbose"
+    "prepublishOnly": "tsc --build --clean && tsc --build --verbose"
   },
   "repository": {
     "type": "git",
