--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
 		"removeComments": false,
 		"alwaysStrict": true,
 		"pretty": true,
-		"target": "es2019",
-		"lib": ["ESNext"],
+		"target": "es2021",
+		"lib": ["ES2021"],
 		"sourceMap": true,
 		"inlineSources": true,
 		"module": "commonjs",
