--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: "${{ secrets.DOCS_TOKEN }}"
+          
       - uses: actions/setup-node@v2
         with:
           node-version: 16
