--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Publish docs
         uses: EndBug/add-and-commit@v7
         with:
+          add: "*"
           cwd: ./docs
           default_author: github_actions
           message: "Automated docs update"
