--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,12 @@ jobs:
       - name: Generate docs
         run: npx typedoc
         
+      - name: Moving to docs folder
+        run: cd docs/
+        
       - name: Publish docs
         uses: EndBug/add-and-commit@v7
         with:
-          cwd: ./docs
+          add: "*"
           default_author: github_actions
           message: "Automated docs update"
