--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Publish NPM package + Docs
-
 on:
   release:
     types: [created]
-
 jobs:
   publish_npm:
      runs-on: ubuntu-latest
@@ -36,7 +34,6 @@ jobs:
           
       - name: Install dependencies
         run: npm install
-
       - name: Delete the docs directory
         run: rm -rf ./docs
         
@@ -50,12 +47,9 @@ jobs:
       - name: Generate docs
         run: npx typedoc
         
-      - name: Moving to docs folder
-        run: cd docs/
-        
       - name: Publish docs
         uses: EndBug/add-and-commit@v7
         with:
-          add: "*"
+          cwd: ./docs
           default_author: github_actions
           message: "Automated docs update"
