--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,9 @@ jobs:
         run: npx typedoc
         
       - name: Publish docs
-        uses: EndBug/add-and-commit@v7
-        with:
-          cwd: ./docs
-          default_author: github_actions
-          message: "Automated docs update"
+        run: |
+          echo $PWD
+          git add .
+          git cm 'Automated docs update'
+          git push
+        working-directory: docs
