--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "play-dl",
   "version": "1.3.6",
-  "description": "YouTube, SoundCloud, Spotify streaming for discord.js bots",
+  "description": "YouTube, SoundCloud, Spotify, Deezer searching and streaming for discord.js bots",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "directories": {
@@ -25,7 +25,8 @@
     "youtube",
     "spotify-dl",
     "spotify",
-    "soundcloud"
+    "soundcloud",
+    "deezer"
   ],
   "author": "Killer069",
   "license": "GPL-3.0",
