--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "prettier": "^2.3.1",
     "tsup": "^5.11.1",
     "typedoc": "^0.22.9",
+    "typedoc-plugin-extras": "^2.2.1",
     "typedoc-plugin-missing-exports": "^0.22.4",
-    "typescript": "^4.4.4",
-    "typedoc-plugin-extras": "^2.2.1"
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "play-audio": "^0.4.3"
   }
 }
