Follow redirects properly when making requests

--- a/tsup.config.json
+++ b/tsup.config.json
@@ -12,5 +12,6 @@
     "skipNodeModulesBundle": true,
     "sourcemap": true,
     "target": "es2021",
-    "splitting": false
+    "splitting": false,
+    "keepNames": true
 }
