--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,14 @@ on:
     branches:
       - main
       - developer
+    paths:
+      - 'play-dl/**'
   pull_request:
+    branches:
+      - main
+      - developer
+    paths:
+      - 'play-dl/**'
 
 jobs:
   build:
