feat(spotify): spotify Classes Added

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "node": true
   },
   "rules": {
-    "no-async-promise-executor": ["off"]
+    "no-async-promise-executor": ["off"],
+    "@typescript-eslint/no-explicit-any" : ["off"]
   }
 }
