--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Publish NPM package + Docs
 on:
   release:
     types: [created]
+  workflow_dispatch:
 jobs:
   publish_npm:
     runs-on: ubuntu-latest
