--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "play-dl",
-  "version": "1.9.5",
+  "version": "1.9.6",
   "description": "YouTube, SoundCloud, Spotify, Deezer searching and streaming for discord-js bots",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -52,5 +52,8 @@
   },
   "dependencies": {
     "play-audio": "^0.5.2"
+  },
+  "bin": {
+    "playdl-auth": "bin/cli.js"
   }
 }
